Fix z-index (List items overlapped control)

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -27,6 +27,7 @@ div#container {
 /* ナビ領域 */
 nav.control {
 	position: relative;
+	z-index: 1000;/* 最上位 */
 	width: 100%;
 	opacity: 0.8;
 	background: #DDF;
@@ -37,7 +38,6 @@ nav.control .buttons {
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	z-index: 1000;/* 最上位 */
 }
 /* ナビ領域：ボタン：ページ番号 */
 nav.control .buttons .pageNo {
@@ -67,7 +67,6 @@ nav.control .overlays {
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	z-index: 500;/* プレゼン領域の上 */
 	pointer-events: none;
 }
 /* ナビ領域：オーバーレイ：開始 */
@@ -81,7 +80,6 @@ nav.control .overlays .start {
 	opacity: 0.5;
 	cursor: pointer;
 	pointer-events: all;
-	z-index: 500;/* プレゼン領域の上 */
 }
 nav.control .overlays .start::before {
 	content: "";
@@ -125,7 +123,6 @@ nav.control .overlays .prev {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );
 	opacity: 0.0;
 	pointer-events: all;
-	z-index: 500;/* プレゼン領域の上 */
 }
 nav.control .overlays .prev::after {
 	content: "";
@@ -158,7 +155,6 @@ nav.control .overlays .next {
 	cursor: pointer;
 	opacity: 0.0;
 	pointer-events: all;
-	z-index: 500;/* プレゼン領域の上 */
 }
 nav.control .overlays .next::after {
 	content: "";
@@ -184,7 +180,6 @@ nav.control .drop {
 	font-size: 2.0em;
 	opacity: 0.5;
 	pointer-events: all;
-	z-index: 10000;
 }
 nav.control .drop::before {
 	content: "Drag & Drop slideshow file.";
@@ -259,6 +254,7 @@ article#rabbit {
 	height: 10px;
 	width: 0px;
 	position: relative;
+	z-index: 200;/* プレゼン領域の上、かめの上 */
 }
 article#rabbit::after {
 	content: url("../img/rabbit.png");
@@ -278,6 +274,7 @@ article#turtle {
 	height: 10px;
 	width: 0px;
 	position: relative;
+	z-index: 300;/* プレゼン領域とうさぎの上、コントロールの下 */
 	/* アニメーション時間の5sは仮置き */
 	        transition: width 5s linear;
 	   -moz-transition: width 5s linear;
